new font author

--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@ hr.bottom {
 }
 
 span#author {
-    font-family: 'Sacramento', cursive;
+  font-family: "Sacramento", cursive;
 }
 
 #page-container {
